--- a/.config/cava/config
+++ b/.config/cava/config
@@ -1,4 +1,4 @@
-## Configuration file for CAVA. Default values are commented out. Use either ';' or '#' for commenting.
+git config pull.ff only## Configuration file for CAVA. Default values are commented out. Use either ';' or '#' for commenting.
 
 
 [general]
